feat: added domain redirect for gh-pages

--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://cdn-icons-png.flaticon.com/512/6840/6840478.png" />
-    
-    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
-          
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://cdn-icons-png.flaticon.com/512/6840/6840478.png"
+    />
+
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Usharab's Portfolio</title>
+    <script>
+      const domain = "https://usharabkhan.com";
+      if (location.hostname.endsWith("github.io")) {
+        location.replace(domain);
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
